--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@ title: CV
   </span>
 
   <div class="line-container">
-    <h2>Employment</h2> 
+    <h2>Academic Employment</h2> 
     <span class="line"></span>
   </div>
 
@@ -316,41 +316,6 @@ title: CV
   {% endfor %}
 
 
-  <div class="line-container">
-    <h2>Work Experience</h2> 
-    <span class="line"></span>
-  </div>
-
-  {% for pos in site.data.positions %}
-  <div class="no-break">
-  <h3 style="margin-left: 90px">{{ pos.title }}{% if pos.company %} at {{pos.company}}{% endif %}</h3>
-    <div class="date-container">
-      <span class="date">{{ pos.years | replace: "-", "–"  }}</span>
-      <span style="flex: 1">{{ pos.description | markdownify }}</span>
-      <span class="right">{{ pos.location }}</span>
-    </div>
-    <p style="margin-left: 90px">
-      {% if pos.mentors %}
-        Mentor{% if pos.mentors.size > 1 %}s{% endif %}: {% for mentor in pos.mentors %}
-          {% include person person=mentor %}{% unless forloop.last %}, {% endunless %}
-        {% endfor %}<br/>
-      {% endif %}
-      {% if pos.skills %}
-      <small class="muted">[{% for skill in pos.skills %}{{ skill }}{% unless forloop.last %}, {% endunless %}{% endfor %}]</small>
-      {% endif %}
-    </p>
-  </div> {% unless forloop.last %}<br/>{% endunless %}
-  {% endfor %}
-
-  <div class="line-container">
-    <h2>Programming</h2>
-    <span class="line"></span>
-  </div>
-  {% for level in site.data.programming %}
-  <div>
-    <b>{{ level.level }}: </b> {{level.list}}
-  </div>
-  {% endfor %}
 
 <br> 
 </section>
