--- a/cv.html
+++ b/cv.html
@@ -159,8 +159,9 @@ title: CV
   {% assign recentcourse = title.items[-1] %}
   <div class="no-break">
     <h3 style="margin-left: 90px">{{ title.name }}</h3> 
-    <div class="date-container">
-      <span class="date"> {% for class in title.items %} {{ class.year | replace: "-", "–"  }} <br> {% endfor %} </span>
+    <span class="date"> {% for class in title.items %} {{ class.year | replace: "-", "–"  }}
+    <div class="date-container"></div>
+      <br> {% endfor %} </span>
       <span style="flex: 1"> {{ recentcourse.role }}. {{ recentcourse.roledescription}} </span>
       <span class="right">{{ recentcourse.location }}</span>
     </div>
