--- a/cv.html
+++ b/cv.html
@@ -158,6 +158,7 @@ title: CV
   {% for title in coursetitles %}
   {% assign recentcourse = title.items[-1] %}
   <div class="no-break">
+    <div class="date-container"></div>
     <span class="date"> {% for class in title.items %} {{ class.year | replace: "-", "–"  }}</span>
     <h3 style="margin-left: 90px">{{ title.name }}</h3> 
       <br> {% endfor %} 
