--- a/cv.html
+++ b/cv.html
@@ -159,8 +159,8 @@ title: CV
   {% assign recentcourse = title.items[-1] %}
   <div class="no-break">
     <div class="date-container">
-    <span class="date"> {% for class in title.items %} {{ class.year | replace: "-", "–"  }}</span>
-    <h3 style="margin-left: 90px">{{ title.name }}<br>.
+    <span class="date"> {% for class in title.items %} {{ class.year | replace: "-", "–"  }}
+    <h3 style="margin-left: 90px">{{ title.name }}<br>
       {% endfor %} 
       <span style="flex: 1"> {{ recentcourse.role }}. {{ recentcourse.roledescription}} </span>
       <span class="right">{{ recentcourse.location }}</span>
