--- a/cv.html
+++ b/cv.html
@@ -267,7 +267,7 @@ title: CV
   {% if service.hide==nil %}
   <div class="no-break">    
   <div class="date-container">
-  <span class="date">{{service.years | replace: "-", "–" }}
+  <span class="date">{{service.years | replace: "-", "–" }}</span>
   <h3 style="margin-left: 90px">{{ service.title }} {% if service.at %} at {{ service.at }} {% endif %}</h3>
       <span style="flex: 1">{{ service.description }}</span>
       <span class="right">{{ service.location }}</span>
