--- a/cv.html
+++ b/cv.html
@@ -268,7 +268,7 @@ title: CV
   <div class="no-break">    
   <div class="date-container">
   <span class="date">{{service.years | replace: "-", "–" }}</span>
-  <h3 style="margin-left: 90px">{{ service.title }} {% if service.at %} at {{ service.at }} {% endif %}</h3>
+  <h3 style>{{ service.title }} {% if service.at %} at {{ service.at }} {% endif %}</h3>
   <span class="right">{{ service.location }}</span>
     </div>
     <span style="flex: 1">{{ service.description }}</span>
