--- a/cv.html
+++ b/cv.html
@@ -73,7 +73,7 @@ title: CV
     <span class="line"></span>
   </div>
 
- <!-- {% assign types = "Journal|Preprint" | split: "|" %}
+  {% assign types = "Journal|Preprint" | split: "|" %}
   {% for type in types %}
     {% assign counter = 1 %}
     {% for pub in site.data.publications %}
@@ -88,7 +88,7 @@ title: CV
 
     {% for pub in site.data.publications %}
       {% if pub.type[0] == type %}
-        {% assign counter = counter | minus: 1 %}-->
+        {% assign counter = counter | minus: 1 %}
         <div class="cv-pub">
           <div class="ref-container">{{ type | slice: 0 }}{{ counter }}</div>
           <h4>{% if pub.pdf %}<a href="{{ pub.pdf }}">{{ pub.title }}</a>{% else %}{{ pub.title }}{%endif%}</h4>
