--- a/cv.html
+++ b/cv.html
@@ -16,9 +16,9 @@ title: CV
   
   <span><h1><a href="{{ absolute_url }}/">John Samuel Sterling</a></h1></span>
   <span class="header-columns">
-    <div hidden> Mathematics Graduate Student at Auburn University </div> 
+    <div hidden> Mathematics Ph.D. Student at Purdue University </div> 
     <div>
-        <a href="jss0122@auburn.edu" style="margin-left:0.6em"><i class="fa-solid fa-envelope" aria-hidden="true"></i> jss0122@auburn.edu</a> 
+        <a href="sterli13@purdue.edu" style="margin-left:0.6em"><i class="fa-solid fa-envelope" aria-hidden="true"></i> sterli13@purdue.edu</a> 
         <a href="{{ absolute_url }}/"><i class="fa-solid fa-globe" style="margin-left:0.6em" aria-hidden="true"></i>https://github.com/johnsamuelsterling</a>
         <a href="https://github.com/johnsamuelsterling"><i class="fab fa-github" style="margin-left: 0.6em" aria-hidden="true"></i> johnsamuelsterling</a>
     </div> 
