--- a/cv.html
+++ b/cv.html
@@ -68,40 +68,60 @@ title: CV
   {% endfor %}
 
 
-  <div class="line-container">
-    <h2>Papers <a href="{{ '/publications/' | absolute_url }}">[Interactive Version]</a></h2>
-    <span class="line"></span>
-  </div>
+<div class="line-container">
+  <h2>Papers <a href="{{ '/publications/' | absolute_url }}">[Interactive Version]</a></h2>
+  <span class="line"></span>
+</div>
 
-  {% assign types = "Journal|Preprint" | split: "|" %}
-  {% for type in types %}
-    {% assign counter = 1 %}
-    {% for pub in site.data.publications %}
-      {% if pub.type[0] == type %}
-        {% assign counter = counter | plus: 1 %}
-      {% endif %}
-    {% endfor %}
-    
-    <h3 class="pub-type">
-      {{ type }}
-    </h3>
+{% assign pubs = site.data.publications | default: empty %}
+{% if pubs and pubs.size > 0 %}
 
-    {% for pub in site.data.publications %}
-      {% if pub.type[0] == type %}
-        {% assign counter = counter | minus: 1 %}
-        <div class="cv-pub">
-          <div class="ref-container">{{ type | slice: 0 }}{{ counter }}</div>
-          <h4>{% if pub.pdf %}<a href="{{ pub.pdf }}">{{ pub.title }}</a>{% else %}{{ pub.title }}{%endif%}</h4>
-          <div>
-            {% for author in pub.authors %}{% include person person=author %}{% unless forloop.last %}, {% endunless %}{% endfor %}.
-            {% if pub.venue %}<i>{{ pub.venue }}</i>,{% endif %} {{ pub.year }}.
-            {% for award in pub.awards %}<br/><strong class="award"><i class="fas fa-{% if award == "Best Paper Award" %}trophy{% else %}award{% endif %}" aria-hidden="true"></i> {{ award }}</strong>{% endfor %}
-          </div>
+  {%- comment -%} Build a unique, sorted list of primary types from the data {%- endcomment -%}
+  {% assign type_list = "" | split: "" %}
+  {% for p in pubs %}
+    {% assign t = p.type | first | default: "Other" %}
+    {% unless type_list contains t %}
+      {% assign type_list = type_list | push: t %}
+    {% endunless %}
+  {% endfor %}
+  {% assign type_list = type_list | sort_natural %}
+
+  {%- comment -%} For each type, count items (for numbering) and render newest first {%- endcomment -%}
+  {% for t in type_list %}
+    {% assign pubs_of_type = pubs | where_exp: "p", "p.type and p.type.first == t" %}
+    {% assign pubs_of_type = pubs_of_type | sort: "year" | reverse %}
+    {% assign counter = pubs_of_type.size %}
+
+    <h3 class="pub-type">{{ t }}</h3>
+
+    {% for pub in pubs_of_type %}
+      <div class="cv-pub">
+        <div class="ref-container">{{ t | slice: 0 }}{{ counter }}</div>
+        <h4>
+          {% assign link = pub.pdf | default: pub.url | default: "" %}
+          {% if link != "" %}<a href="{{ link }}">{{ pub.title }}</a>{% else %}{{ pub.title }}{% endif %}
+        </h4>
+        <div>
+          {% if pub.authors %}
+            {% for author in pub.authors %}
+              {% include person person=author %}{% unless forloop.last %}, {% endunless %}
+            {% endfor %}.
+          {% endif %}
+          {% if pub.venue %} <i>{{ pub.venue }}</i>,{% endif %} {{ pub.year }}.
+          {% if pub.awards %}
+            {% for award in pub.awards %}
+              <br/><strong class="award">
+                <i class="fas fa-{% if award == "Best Paper Award" %}trophy{% else %}award{% endif %}" aria-hidden="true"></i> {{ award }}
+              </strong>
+            {% endfor %}
+          {% endif %}
         </div>
-      {% endif %}
+      </div>
+      {% assign counter = counter | minus: 1 %}
     {% endfor %}
   {% endfor %}
 
+{% endif %}
 
   <div class="line-container">
     <h2>Talks  <a href="{{ '/talks/' | absolute_url }}">[Interactive Version]</a></h2>
